# asyop

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  basic-concepts.md  conanfile.py  dev.nix  further.md  getting-started.md  index.md
.ci/: msan_libcxx
cmake/: FindASIO.cmake  asyop-config.cmake.in  build-types.cmake  coverage-support.cmake
docs/: _config.yml  further.md
include/asy/: basic_context.hpp  basic_op.hpp  basic_op_handle.hpp  basic_ops.hpp  context.hpp  executor.hpp  op.hpp  thread.hpp
include/asy/common/: aret_continuation.hpp  ctx_continuation.hpp  simple_continuation.hpp  type_traits.hpp  voe_continuation.hpp
include/asy/core/: basic_op_handle.hpp  continuation.hpp
include/asy/core/support/: concept.hpp
include/asy/detail/: continuation.hpp  continuation_info.hpp  continuations.hpp  type_traits.hpp  value_or_error.hpp
include_asio/asy/: event_loop_asio.hpp  evloop_asio.hpp
lib/: CMakeLists.txt
lib/include/asy/: basic_op.hpp  basic_ops.hpp  op.hpp  thread.hpp
lib/include/asy/common/: aret_continuation.hpp  ctx_continuation.hpp  simple_continuation.hpp  type_traits.hpp  util.hpp  voe_continuation.hpp
lib/include/asy/core/: basic_context.hpp  basic_op_handle.hpp  continuation.hpp  executor.hpp
lib/include/asy/core/support/: concept.hpp
lib/include_asio/asy/: evloop_asio.hpp
lib/src/: asy.cpp  executor.cpp
lib/src_asio/: evloop_asio.cpp
src/: asy.cpp
src_asio/: event_loop.cpp  evloop_asio.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  asio.cpp  barrier.hpp  continuation.cpp  continuation_info.cpp  executor.cpp  main.cpp  op.cpp  op_handle.cpp  ops.cpp  then.cpp  thread.cpp  type_traits.cpp  util.cpp  value_or_error.cpp  voe.hpp  vor.hpp
